# tokagetone

./: CMakeLists.txt
assets/: BG.chr  BG.pal  SPR.chr  SPR.pal  metasprites.nss  music-editor-alt.nam  music-editor.nam  title.nam
ca65src/: CMakeLists.txt  ggsound.asm  ggsound.inc  lalala.inc  soundtrack.s
drafts/: border-tiles.nss  ideas.md  sheet.nss  title.nss
music/: soundtrack.txt  tokagetone.ftm
src/: CMakeLists.txt  assets.hpp  assets.s  bank-helper.hpp  banked-asset-helpers.cpp  banked-asset-helpers.hpp  banked-asset-helpers.s  camera.cpp  camera.hpp  common.hpp  config.s  donut.s  ggsound.cpp  ggsound.hpp  ggsound.inc  ggsound.s  maestro.cpp  maestro.hpp  main.cpp  music-editor.cpp  music-editor.hpp  soundtrack-ptr.hpp  soundtrack.hpp  soundtrack.s  title-screen.cpp  title-screen.hpp
tools/: ft_txt_to_asm.py  lalala.rb  map-parser
